<resources>
    <string name="app_name">Profile</string>
    <string name="justine">Justine Denise Hernandez </string>
    <string name="about">About</string>
    <string name="bio"> Hi I\'m Justine. I am a 2nd year college student in BS Computer Science. My interests are I love K-Pop girl groups. I love watching any movies, series, anime, or any media content. My current motivation is that I strive to be a better developer some day.</string>
    <string name="user_information">User Information</string>
    <string name="username">Username</string>
    <string name="jus675">jus675</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="_19">19</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="_01_20_2004">Jan 20 2004</string>
    <string name="email">Email</string>
    <string name="jh434_gmail_com">justinehernandez434@gmail.com</string>
    <string name="social_media">Social Media</string>
    <string name="facebook">Facebook</string>
    <string name="linkedin">LinkedIn</string>
    <string name="instagram">Instagram</string>

</resources>